--- a/app/static/artist.ejs
+++ b/app/static/artist.ejs
@@ -2,11 +2,14 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>jane - indi artist</title>
+    <meta name="description" content="noirdoor music streaming">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles/style.css">
+    <title>jane - indi artist</title>
   </head>
   <body>
-    <% include views/partial %>
+    <% include views/nav %>
+
     <script type="text/javascript" src="scripts/bundle.js"></script>
   </body>
 </html>
