--- a/app/static/styles/config/vars.sass
+++ b/app/static/styles/config/vars.sass
@@ -5,12 +5,13 @@ $color2: rgba(7, 163, 74, 1)
 $color3: rgba(146, 48, 90, 1)
 $color4: rgba(79, 145, 5, 1)
 $color5: rgba(62, 54, 35, 1)
-
+$color6: #4C4D50
+$color7: #9da5a9
 
 /*Fonts*/
 
 @mixin body-text
-  font-family: font-family: 'Open Sans', sans-serif
+  font-family: 'Open Sans', sans-serif
 
 @mixin heading-text
   font-family: 'Palanquin Dark', sans-serif
