styled the header

--- a/app/static/artist.ejs
+++ b/app/static/artist.ejs
@@ -9,6 +9,7 @@
   </head>
   <body>
     <% include views/nav %>
+    <% include views/header %>
 
     <script type="text/javascript" src="scripts/bundle.js"></script>
   </body>
