--- a/app/static/styles/style.css
+++ b/app/static/styles/style.css
@@ -90,3 +90,60 @@ nav {
     text-transform: uppercase;
     height: 100%;
     line-height: 54px; }
+
+.artist-bg {
+  background: url("/images/artist-bg.jpg");
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  justify-content: space-around;
+  min-height: 400px; }
+  @media screen and (max-width: 720px) {
+    .artist-bg {
+      flex-direction: column; } }
+  .artist-bg .artist-profile {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-basis: 50%;
+    padding: 20px;
+    background: rgba(0, 0, 0, 0.2); }
+    @media screen and (max-width: 900px) {
+      .artist-bg .artist-profile {
+        flex-basis: 60%; } }
+    .artist-bg .artist-profile .profile-picture {
+      width: 200px;
+      border-radius: 50%;
+      border: 5px solid #f8efd2;
+      margin-right: 15px; }
+    .artist-bg .artist-profile .about-artist .artist-name {
+      font-family: 'Palanquin Dark', sans-serif;
+      font-size: 2em;
+      margin-bottom: 10px; }
+      .artist-bg .artist-profile .about-artist .artist-name a {
+        color: #4C4D50;
+        text-decoration: underline; }
+    .artist-bg .artist-profile .about-artist .genre {
+      color: #65666a;
+      font-size: 1.2em; }
+  .artist-bg .support {
+    align-self: center; }
+    .artist-bg .support .btn {
+      padding: 10px 25px;
+      border-radius: 20px;
+      font-weight: 700;
+      cursor: pointer;
+      transition: all 300ms ease; }
+    .artist-bg .support .support {
+      background: #4f9105;
+      color: #fff;
+      border: 1px solid #fff;
+      margin: 0 10px; }
+      .artist-bg .support .support:hover {
+        background: #5caa06; }
+    .artist-bg .support .follow {
+      border: 1px solid #4f9105;
+      background: #fff;
+      color: #4f9105; }
+      .artist-bg .support .follow:hover {
+        background: #f2f2f2; }
