styled the top songs and similar artists sections

--- a/app/static/artist.ejs
+++ b/app/static/artist.ejs
@@ -10,7 +10,9 @@
   <body>
     <% include views/nav %>
     <% include views/header %>
+    <% include views/topsongs %>
 
+    <script src="https://use.fontawesome.com/cb89ba2f9a.js"></script>
     <script type="text/javascript" src="scripts/bundle.js"></script>
   </body>
 </html>
