--- a/app/static/styles/config/base.sass
+++ b/app/static/styles/config/base.sass
@@ -13,8 +13,10 @@ a
 button
   outline: none
   border: none
+  cursor: pointer
 
 
 body
   font-size: 16px
   @include body-text
+  background: $color8
