--- a/app/static/styles/config/vars.sass
+++ b/app/static/styles/config/vars.sass
@@ -7,6 +7,9 @@ $color4: rgba(79, 145, 5, 1)
 $color5: rgba(62, 54, 35, 1)
 $color6: #4C4D50
 $color7: #9da5a9
+$color8: #464d50
+$color9: #aaa386
+
 
 /*Fonts*/
 
