--- a/app/static/styles/style.css
+++ b/app/static/styles/style.css
@@ -61,11 +61,13 @@ a {
 
 button {
   outline: none;
-  border: none; }
+  border: none;
+  cursor: pointer; }
 
 body {
   font-size: 16px;
-  font-family: 'Open Sans', sans-serif; }
+  font-family: 'Open Sans', sans-serif;
+  background: #464d50; }
 
 nav {
   background: #4C4D50;
@@ -147,3 +149,79 @@ nav {
       color: #4f9105; }
       .artist-bg .support .follow:hover {
         background: #f2f2f2; }
+
+@media screen and (max-width: 780px) {
+  .similar-artists {
+    order: -1; } }
+
+figure:hover {
+  background: #292929; }
+
+figure img {
+  border-radius: 50%;
+  margin-right: 10px; }
+
+figure figcaption {
+  align-self: center; }
+  figure figcaption h3 {
+    margin-bottom: 10px; }
+    figure figcaption h3 a {
+      color: #07a34a; }
+  figure figcaption span {
+    color: #171717; }
+
+.song .song-info {
+  margin-right: auto;
+  margin-left: 5px; }
+  .song .song-info .song-name {
+    margin: 5px 0;
+    font-weight: 700;
+    color: #5e676b; }
+  .song .song-info .album {
+    font-size: 0.9em;
+    color: #484848; }
+
+.song .play-button {
+  align-self: center;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  background: #171515; }
+  .song .play-button i {
+    font-size: 1.5em;
+    color: #4f9105; }
+
+#is-playing {
+  background: #1f1e1e; }
+  #is-playing .song-name,
+  #is-playing .album {
+    color: #4f9105; }
+
+main {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 55px; }
+  @media screen and (max-width: 720px) {
+    main {
+      flex-direction: column;
+      align-items: center; } }
+  main .container {
+    width: 350px;
+    background: rgba(0, 0, 0, 0.4);
+    border-top: 3px solid #4f9105;
+    padding: 20px 0;
+    margin-bottom: 15px; }
+    main .container > h3 {
+      text-align: center;
+      margin-bottom: 20px;
+      font-size: 1.0em;
+      font-weight: 700;
+      color: #aaa386; }
+    main .container img {
+      width: 70px;
+      height: 70px; }
+    main .container .song,
+    main .container figure {
+      display: flex;
+      margin-bottom: 10px;
+      padding: 7px 10px; }
