styled the player

--- a/app/static/artist.ejs
+++ b/app/static/artist.ejs
@@ -11,8 +11,10 @@
     <% include views/nav %>
     <% include views/header %>
     <% include views/topsongs %>
+    <% include views/player %>
 
     <script src="https://use.fontawesome.com/cb89ba2f9a.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/wavesurfer.js/1.3.7/wavesurfer.min.js"></script>
     <script type="text/javascript" src="scripts/bundle.js"></script>
   </body>
 </html>
