added function to play songs

--- a/app/static/views/header.ejs
+++ b/app/static/views/header.ejs
@@ -1,6 +1,6 @@
 <header class="artist-bg">
   <div class="artist-profile">
-    <img src="/images/artist-profile.jpg" alt="" class="profile-picture">
+    <img src="/images/jane.jpg" alt="" class="profile-picture">
 
     <div class="about-artist">
       <h1 class="artist-name">
