--- a/app/static/views/topsongs.ejs
+++ b/app/static/views/topsongs.ejs
@@ -4,38 +4,38 @@
 
     <div class="songs-container">
       <div class="song" id="is-playing">
-        <img src="/images/album01.jpg" alt="album cover">
+        <img src="/images/firework.jpg" alt="album cover">
 
         <div class="song-info">
           <h3 class="song-name">FireWork</h3>
           <span class="album">Anatomy of the bear</span>
         </div>
 
-        <button class="play-button">
+        <button class="play-button" data-song-name="firework">
           <i class="fa fa-play is-playing" aria-hidden="true"></i>
         </button>
       </div> <!--end of song-->
       <div class="song">
-        <img src="/images/album01.jpg" alt="album cover">
+        <img src="/images/dawn.jpg" alt="album cover">
 
         <div class="song-info">
-          <h3 class="song-name">FireWork</h3>
+          <h3 class="song-name">Dawn</h3>
           <span class="album">Anatomy of the bear</span>
         </div>
 
-        <button class="play-button">
+        <button class="play-button" data-song-name="dawn">
           <i class="fa fa-play is-playing" aria-hidden="true"></i>
         </button>
       </div><!--end of song-->
       <div class="song">
-        <img src="/images/album01.jpg" alt="album cover">
+        <img src="/images/pawinpaw.jpg" alt="album cover">
 
         <div class="song-info">
-          <h3 class="song-name">FireWork</h3>
-          <span class="album">Anatomy of the bear</span>
+          <h3 class="song-name">Paw in Paw</h3>
+          <span class="album">Awakening</span>
         </div>
 
-        <button class="play-button">
+        <button class="play-button" data-song-name="pawinpaw">
           <i class="fa fa-play" aria-hidden="true"></i>
         </button>
       </div> <!--end of song-->
@@ -46,7 +46,7 @@
     <h3>similar artists</h3>
     <div class="artists">
       <figure>
-        <img src="/images/similar-artist.jpg" alt="artist picture">
+        <img src="/images/john.jpg" alt="artist picture">
         <figcaption>
           <h3>
             <a href="#">john michael</a>
@@ -57,10 +57,10 @@
     </div> <!--end of artist-->
     <div class="artists">
       <figure>
-        <img src="/images/similar-artist.jpg" alt="artist picture">
+        <img src="/images/alex.jpg" alt="artist picture">
         <figcaption>
           <h3>
-            <a href="#">john michael</a>
+            <a href="#">Alex zane</a>
           </h3>
           <span>Postrock</span>
         </figcaption>
@@ -68,10 +68,10 @@
     </div><!--end of artist-->
     <div class="artists">
       <figure>
-        <img src="/images/similar-artist.jpg" alt="artist picture">
+        <img src="/images/mike.jpg" alt="artist picture">
         <figcaption>
           <h3>
-            <a href="#">john michael</a>
+            <a href="#">mike henry</a>
           </h3>
           <span>Postrock</span>
         </figcaption>
