updated the ui and made it responsive to user interactions

--- a/app/static/styles/components/song.sass
+++ b/app/static/styles/components/song.sass
@@ -15,12 +15,14 @@
     height: 50px
     border-radius: 50%
     background: #171515
-    i
-      font-size: 1.5em
-      color: $color4
+    font-size: 1.2em
+    color: $color4
 
 #is-playing
   background: #1f1e1e
   .song-name,
   .album
     color: $color4
+  button
+    &::before
+      content: "\f04c"
