--- a/app/static/views/player.ejs
+++ b/app/static/views/player.ejs
@@ -1,6 +1,6 @@
 <div id="player-container">
   <div class="track-info">
-    <img src="/images/dawn.jpg" alt="track image" class="track-image">
+    <img src="/images/firework.jpg" alt="track image" class="track-image">
 
     <p>
       <span class="track-name">firework</span><br>
