--- a/app/static/views/topsongs.ejs
+++ b/app/static/views/topsongs.ejs
@@ -11,8 +11,7 @@
           <span class="album">Anatomy of the bear</span>
         </div>
 
-        <button class="play-button" data-song-name="firework">
-          <i class="fa fa-play is-playing" aria-hidden="true"></i>
+        <button class="fa fa-play play-button" aria-hidden="true" data-song-key="firework">
         </button>
       </div> <!--end of song-->
       <div class="song">
@@ -23,8 +22,7 @@
           <span class="album">Anatomy of the bear</span>
         </div>
 
-        <button class="play-button" data-song-name="dawn">
-          <i class="fa fa-play is-playing" aria-hidden="true"></i>
+        <button class="fa fa-play play-button" aria-hidden="true" data-song-key="dawn">
         </button>
       </div><!--end of song-->
       <div class="song">
@@ -35,8 +33,7 @@
           <span class="album">Awakening</span>
         </div>
 
-        <button class="play-button" data-song-name="pawinpaw">
-          <i class="fa fa-play" aria-hidden="true"></i>
+        <button class="fa fa-play play-button" aria-hidden="true" data-song-key="pawinpaw">
         </button>
       </div> <!--end of song-->
     </div>
