--- a/app/static/styles/style.css
+++ b/app/static/styles/style.css
@@ -189,16 +189,17 @@ figure figcaption {
   width: 50px;
   height: 50px;
   border-radius: 50%;
-  background: #171515; }
-  .song .play-button i {
-    font-size: 1.5em;
-    color: #4f9105; }
+  background: #171515;
+  font-size: 1.2em;
+  color: #4f9105; }
 
 #is-playing {
   background: #1f1e1e; }
   #is-playing .song-name,
   #is-playing .album {
     color: #4f9105; }
+  #is-playing button::before {
+    content: "\f04c"; }
 
 main {
   display: flex;
