--- a/app/static/views/topsongs.ejs
+++ b/app/static/views/topsongs.ejs
@@ -3,7 +3,7 @@
     <h3>top songs by jane</h3>
 
     <div class="songs-container">
-      <div class="song" id="is-playing">
+      <div class="song">
         <img src="/images/firework.jpg" alt="album cover">
 
         <div class="song-info">
