add loading icon when that shows up when the song is being loading

--- a/app/static/views/topsongs.ejs
+++ b/app/static/views/topsongs.ejs
@@ -3,7 +3,7 @@
     <h3>top songs by jane</h3>
 
     <div class="songs-container">
-      <div class="song loading">
+      <div class="song">
         <img src="/images/firework.jpg" alt="album cover">
 
         <div class="song-info">
@@ -11,7 +11,7 @@
           <span class="album">Anatomy of the bear</span>
         </div>
 
-        <button class="fa fa-play play-button fa-circle-o-notch fa-spin" aria-hidden="true" data-song-key="firework">
+        <button class="fa fa-play play-button" aria-hidden="true" data-song-key="firework">
         </button>
       </div> <!--end of song-->
       <div class="song">
